--- a/arch/parisc/include/asm/Kbuild
+++ b/arch/parisc/include/asm/Kbuild
@@ -15,6 +15,7 @@ generic-y += mcs_spinlock.h
 generic-y += mutex.h
 generic-y += param.h
 generic-y += percpu.h
+generic-y += preempt.h
 generic-y += topology.h
 generic-y += trace_clock.h
 generic-y += user.h
