--- a/arch/avr32/include/asm/Kbuild
+++ b/arch/avr32/include/asm/Kbuild
@@ -3,4 +3,5 @@ generic-y += clkdev.h
 generic-y += exec.h
 generic-y += mcs_spinlock.h
 generic-y += param.h
+generic-y += preempt.h
 generic-y += trace_clock.h
