--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -308,4 +308,11 @@ config RESTRICT_ROOTFS_SLAVE
 	  Android init.rc.  If this volume is unavailable, then we fall back to the
 	  previous behavior of marking the entire filesystem hierarchy as slave.
 
+config DYNAMIC_FSYNC
+	bool "dynamic file sync control"
+	default n
+	help
+	  An experimental file sync control using pm suspend / resume drivers
+
+
 endmenu
