--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -111,7 +111,6 @@ CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
 CONFIG_CPUSETS=y
-CONFIG_PROC_PID_CPUSET=y
 CONFIG_FG_BG_CPUSET_OOM_ADJ=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
@@ -3150,11 +3149,11 @@ CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
-CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
+CONFIG_SEC_OOM_KILLER=y
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 CONFIG_ION_EXYNOS=y
