--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -112,6 +112,7 @@ CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
 CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
+CONFIG_FG_BG_CPUSET_OOM_ADJ=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
 # CONFIG_MEMCG is not set
@@ -381,10 +382,13 @@ CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
-# CONFIG_CLEANCACHE is not set
-CONFIG_FRONTSWAP=y
+CONFIG_CLEANCACHE=y
+#CONFIG_FRONTSWAP is not set
+CONFIG_ZCACHE=y
+CONFIG_ZCACHE_LZ4_COMPRESS=y
 # CONFIG_ZBUD is not set
-# CONFIG_ZSWAP is not set
+CONFIG_ZSWAP=y
+CONFIG_ZSWAP_LZ4=y
 CONFIG_ZPOOL=y
 CONFIG_ZSMALLOC=y
 CONFIG_PGTABLE_MAPPING=y
@@ -407,7 +411,7 @@ CONFIG_SECCOMP=y
 #
 # Boot options
 #
-CONFIG_CMDLINE="console=/dev/ttySAC1 androidboot.warranty_bit=0 androidboot.selinux=permissive"
+CONFIG_CMDLINE="zcache console=/dev/ttySAC1 androidboot.warranty_bit=0"
 CONFIG_CMDLINE_FROM_BOOTLOADER is not set
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
@@ -3240,7 +3244,7 @@ CONFIG_SEC_DEBUG_TSP_LOG=y
 #
 CONFIG_SEC_PM=y
 CONFIG_SEC_PM_DEBUG=y
-# CONFIG_VNSWAP is not set
+CONFIG_VNSWAP=y
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
