--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -387,8 +387,7 @@ CONFIG_CLEANCACHE=y
 CONFIG_ZCACHE=y
 CONFIG_ZCACHE_LZ4_COMPRESS=y
 # CONFIG_ZBUD is not set
-CONFIG_ZSWAP=y
-CONFIG_ZSWAP_LZ4=y
+CONFIG_ZSWAP is not set
 CONFIG_ZPOOL=y
 CONFIG_ZSMALLOC=y
 CONFIG_PGTABLE_MAPPING=y
@@ -3244,7 +3243,7 @@ CONFIG_SEC_DEBUG_TSP_LOG=y
 #
 CONFIG_SEC_PM=y
 CONFIG_SEC_PM_DEBUG=y
-CONFIG_VNSWAP=y
+# CONFIG_VNSWAP is not set
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
