arch: arm64: configs: a3xelte: only use 4 cores

--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -299,8 +299,8 @@ CONFIG_EXYNOS_ASV_DYNAMIC_ABB=y
 CONFIG_EXYNOS_ASV_MARGIN_TEST=y
 # CONFIG_SKIP_HW_BREAKPOINT is not set
 CONFIG_CAL_SYS_PWRDOWN=y
-# CONFIG_EXYNOS7580_QUAD is not set
-# CONFIG_EXYNOS7580_DYNAMIC_CLUSTER_HOTPLUG is not set
+CONFIG_EXYNOS7580_QUAD=y
+CONFIG_EXYNOS7580_DYNAMIC_CLUSTER_HOTPLUG=y
 # CONFIG_EXYNOS_CONTENT_PATH_PROTECTION is not set
 CONFIG_EXYNOS5_SETUP_MIPIPHY=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
@@ -337,7 +337,7 @@ CONFIG_SMP=y
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 # CONFIG_DISABLE_CPU_SCHED_DOMAIN_BALANCE is not set
-CONFIG_NR_CPUS=8
+CONFIG_NR_CPUS=4
 CONFIG_HOTPLUG_CPU=y
 CONFIG_LOCAL_TIMERS=y
 CONFIG_SWP_EMULATE=y
@@ -481,7 +481,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_GOV_CAFACTIVE=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
-CONFIG_LAZYPLUG=y
+# CONFIG_LAZYPLUG is not set
 
 #
 # ARM CPU frequency scaling drivers
