bcmdhd4343: WIFI PM support
Original implementation and credit @halaszk and @UpInTheAir

Ported to bcmdhd4343

Based on https://github.com/TeamNexus/android_kernel_samsung_exynos7420/commit/3c1ff4e532cd36ebf8d747309a7c6c638ca25122

--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -1409,6 +1409,7 @@ CONFIG_WLAN_REGION_CODE=100
 # CONFIG_WL_NAN is not set
 # CONFIG_BCMDHD_PREALLOC_MEMDUMP is not set
 CONFIG_BCMDHD_OOB_HOST_WAKE=y
+CONFIG_BCMDHD_WIFI_PM=y
 # CONFIG_SPLIT_ARGOS_SET is not set
 
 #
