--- a/drivers/base/Kconfig
+++ b/drivers/base/Kconfig
@@ -292,7 +292,7 @@ config PM_KWAKEBLOCK
 	tristate "Generic Kernel Wakelock-Blocker Driver"
 	default y
 	help
-		Allows to block kernel-wakeclosk and wakeup-sources from
+		Allows to block kernel-wakelocks and wakeup-sources from
 		userspace
 
 endmenu
