--- a/drivers/net/wireless/bcmdhd/Kconfig
+++ b/drivers/net/wireless/bcmdhd/Kconfig
@@ -111,10 +111,10 @@ config BROADCOM_WIFI_RESERVED_MEM
 	  This is a configuration for broadcom WLAN driver.
 
 config WIFI_BROADCOM_COB
-        bool "BROADCOM WIFI COB"
-        depends on (BCM43455 || BCM4343)
-        ---help---
-          This is a configuration for broadcom WIFI COB Type.
+	bool "BROADCOM WIFI COB"
+	depends on (BCM43455 || BCM4343)
+	---help---
+	  This is a configuration for broadcom WIFI COB Type.
 
 config BCM4335BT
 	bool "BROADCOM BTLOCK Enable"
@@ -122,6 +122,13 @@ config BCM4335BT
 	default y
 	---help---
 	  This is a configuration for bt lock enable.
+
+config BCMDHD_WIFI_PM
+	bool "Enable support for changing the WiFi power mode"
+	depends on (BCM4330 || BCM4343 || BCM4334 || BCM4335 || BCM4339 || BCM4354 || BCM43241 || BCM43455 || BCM43454)
+	default y
+	---help---
+	Enable support for changing the WiFi power mode for screen-off.
 
 config WLAN_REGION_CODE
 	int "---Region codes for Broadcom WiFi Driver"
