a3xeltexx: regenerate defconfig

--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.10.61 Kernel Configuration
+# Linux/arm64 3.10.108 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -102,6 +102,8 @@ CONFIG_RCU_FANOUT_LEAF=16
 # CONFIG_RCU_FAST_NO_HZ is not set
 # CONFIG_TREE_RCU_TRACE is not set
 CONFIG_RCU_BOOST=y
+CONFIG_RCU_BOOST_PRIO=1
+CONFIG_RCU_BOOST_DELAY=500
 # CONFIG_RCU_NOCB_CPU is not set
 # CONFIG_IKCONFIG is not set
 CONFIG_LOG_BUF_SHIFT=19
@@ -112,7 +114,6 @@ CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
 CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
-CONFIG_FG_BG_CPUSET_OOM_ADJ=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
 # CONFIG_MEMCG is not set
@@ -411,8 +412,8 @@ CONFIG_SECCOMP=y
 # Boot options
 #
 CONFIG_CMDLINE="console=/dev/ttySAC1 androidboot.warranty_bit=0"
-CONFIG_CMDLINE_FROM_BOOTLOADER is not set
-# CONFIG_CMDLINE_EXTEND is not set
+CONFIG_CMDLINE_FROM_BOOTLOADER=y
+CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 
@@ -436,6 +437,7 @@ CONFIG_KEYS_COMPAT=y
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
 CONFIG_HAS_WAKELOCK=y
+CONFIG_POWERSUSPEND=y
 CONFIG_WAKELOCK=y
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
@@ -457,6 +459,8 @@ CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_RUNTIME=y
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
+CONFIG_PM_SYNC_BEFORE_SUSPEND=y
+CONFIG_QUICK_WAKEUP=y
 
 #
 # CPU Frequency scaling
@@ -896,7 +900,7 @@ CONFIG_NET_ACT_MIRRED=y
 # CONFIG_NET_CLS_IND is not set
 CONFIG_NET_SCH_FIFO=y
 # CONFIG_DCB is not set
-# CONFIG_DNS_RESOLVER is not set
+CONFIG_DNS_RESOLVER=y
 # CONFIG_BATMAN_ADV is not set
 # CONFIG_OPENVSWITCH is not set
 # CONFIG_VSOCKETS is not set
@@ -995,6 +999,7 @@ CONFIG_FW_LOADER=y
 CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_EXTRA_FIRMWARE=""
 CONFIG_FW_LOADER_USER_HELPER=y
+# CONFIG_FW_CACHE is not set
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
@@ -2416,12 +2421,6 @@ CONFIG_BACKLIGHT_GENERIC=y
 # CONFIG_BACKLIGHT_LM3639 is not set
 # CONFIG_BACKLIGHT_LP855X is not set
 # CONFIG_ADF is not set
-
-#
-# Console display driver support
-#
-CONFIG_DUMMY_CONSOLE=y
-# CONFIG_FRAMEBUFFER_CONSOLE is not set
 # CONFIG_LOGO is not set
 # CONFIG_FB_SSD1307 is not set
 # CONFIG_XO2_SPI is not set
@@ -2790,7 +2789,7 @@ CONFIG_USB_SERIAL_FTDI_SIO=y
 # CONFIG_USB_HSIC_USB3503 is not set
 CONFIG_USB_EXYNOS_SWITCH=y
 CONFIG_USB_PHY=y
-CONFIG_USB_OTG_WAKELOCK=y
+# CONFIG_USB_OTG_WAKELOCK is not set
 # CONFIG_K5_REV01_USB_WA is not set
 # CONFIG_NOP_USB_XCEIV is not set
 # CONFIG_OMAP_CONTROL_USB is not set
@@ -3196,7 +3195,7 @@ CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
-CONFIG_SEC_OOM_KILLER=y
+# CONFIG_SEC_OOM_KILLER is not set
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 CONFIG_ION_EXYNOS=y
@@ -3240,6 +3239,7 @@ CONFIG_SEC_BSP=y
 CONFIG_SEC_AVC_LOG=y
 CONFIG_SEC_DEBUG_TSP_LOG=y
 # CONFIG_SEC_DEBUG_TIMA_LOG is not set
+CONFIG_SEC_DEBUG_LAST_KMSG=y
 
 #
 # Samsung TN Power Management Options
@@ -3455,6 +3455,7 @@ CONFIG_CHARGER_S2MU003_DISABLE_SUPPORT_TOP_OFF_TMR=y
 # CONFIG_STORE_MODE is not set
 CONFIG_A3XE=y
 # CONFIG_LOWTEMP_VBAT_DROP_PREVENT is not set
+CONFIG_SEC_BATTERY_CHARGE_CONTROL=y
 # CONFIG_RESET_CONTROLLER is not set
 CONFIG_MOBICORE_DRIVER=y
 # CONFIG_MOBICORE_DEBUG is not set
@@ -3566,6 +3567,7 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
 # CONFIG_FS_POSIX_ACL is not set
+# CONFIG_FS_ENCRYPTION is not set
 CONFIG_FILE_LOCKING=y
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
@@ -3589,6 +3591,12 @@ CONFIG_ASYNC_FSYNC=y
 # Caches
 #
 # CONFIG_FSCACHE is not set
+CONFIG_FSCACHE=y
+# CONFIG_FSCACHE_STATS is not set
+# CONFIG_FSCACHE_HISTOGRAM is not set
+# CONFIG_FSCACHE_DEBUG is not set
+# CONFIG_FSCACHE_OBJECT_LIST is not set
+# CONFIG_CACHEFILES is not set
 
 #
 # CD-ROM/DVD Filesystems
@@ -3611,6 +3619,7 @@ CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_VIRTUAL_XATTR=y
 CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 CONFIG_EXFAT_SUPPORT_STLOG=y
+CONFIG_SDFAT_STATISTICS=y
 CONFIG_NTFS_FS=y
 CONFIG_NTFS_RW=y
 
