--- a/drivers/net/wireless/Makefile
+++ b/drivers/net/wireless/Makefile
@@ -62,14 +62,14 @@ obj-$(CONFIG_MACH_UNIVERSAL7580) += bcmdhd/dhd_custom_exynos.o
 endif
 
 ifneq ($(CONFIG_BCM43454),)
-obj-$(CONFIG_BCM43454)  += bcmdhd/
-obj-$(CONFIG_MACH_UNIVERSAL3475) += bcmdhd/dhd_custom_exynos.o/
-obj-$(CONFIG_MACH_UNIVERSAL7580) += bcmdhd/dhd_custom_exynos.o
+obj-$(CONFIG_BCM43454)  += bcmdhd_mm/
+obj-$(CONFIG_MACH_UNIVERSAL3475) += bcmdhd_mm/dhd_custom_exynos.o/
+obj-$(CONFIG_MACH_UNIVERSAL7580) += bcmdhd_mm/dhd_custom_exynos.o
 endif
 
 ifneq ($(CONFIG_BCM43455),)
-obj-$(CONFIG_BCM43455)  += bcmdhd/
-obj-$(CONFIG_MACH_UNIVERSAL7580) += bcmdhd/dhd_custom_exynos.o
+obj-$(CONFIG_BCM43455)  += bcmdhd_mm/
+obj-$(CONFIG_MACH_UNIVERSAL7580) += bcmdhd_mm/dhd_custom_exynos.o
 endif
 
 obj-$(CONFIG_BRCMFMAC)	+= brcm80211/
