--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -34,6 +34,7 @@ CONFIG_GENERIC_BUG=y
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
+CONFIG_TIMER_STATS=y
 
 #
 # General setup
@@ -301,7 +302,7 @@ CONFIG_EXYNOS_ASV_MARGIN_TEST=y
 # CONFIG_SKIP_HW_BREAKPOINT is not set
 CONFIG_CAL_SYS_PWRDOWN=y
 # CONFIG_EXYNOS7580_QUAD is not set
-CONFIG_EXYNOS7580_DYNAMIC_CLUSTER_HOTPLUG=y
+# CONFIG_EXYNOS7580_DYNAMIC_CLUSTER_HOTPLUG is not set
 # CONFIG_EXYNOS_CONTENT_PATH_PROTECTION is not set
 CONFIG_EXYNOS5_SETUP_MIPIPHY=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
@@ -503,7 +504,7 @@ CONFIG_ARM_EXYNOS_SMP_CPUFREQ=y
 # CONFIG_ARM_EXYNOS7420_CPUFREQ is not set
 # CONFIG_ARM_EXYNOS5440_CPUFREQ is not set
 # CONFIG_ARM_KIRKWOOD_CPUFREQ is not set
-# CONFIG_LAZYPLUG is not set
+CONFIG_LAZYPLUG=y
 
 #
 # APM Driver
@@ -3178,7 +3179,7 @@ CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
-CONFIG_SEC_OOM_KILLER=y
+# CONFIG_SEC_OOM_KILLER is not set
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 CONFIG_ION_EXYNOS=y
@@ -3598,6 +3599,8 @@ CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 CONFIG_SDFAT_SUPPORT_STLOG=y
 # CONFIG_SDFAT_DEBUG is not set
 CONFIG_SDFAT_STATISTICS=y
+CONFIG_NTFS_FS=y
+CONFIG_NTFS_RW=y
 
 #
 # Pseudo filesystems
