arch: arm64: configs: disable some Samsung's stuff

--- a/arch/arm64/configs/lineageos_s5neolte_defconfig
+++ b/arch/arm64/configs/lineageos_s5neolte_defconfig
@@ -3224,7 +3224,7 @@ CONFIG_SEC_DEBUG=y
 #
 # BSP Feature
 #
-CONFIG_SEC_BSP=y
+# CONFIG_SEC_BSP is not set
 
 #
 # Samsung TN logging feature
@@ -3237,8 +3237,7 @@ CONFIG_SEC_DEBUG_LAST_KMSG=y
 #
 # Samsung TN Power Management Options
 #
-CONFIG_SEC_PM=y
-CONFIG_SEC_PM_DEBUG=y
+CONFIG_SEC_PM is not set
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
