--- a/arch/arm64/configs/lineageos_a5xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a5xelte_defconfig
@@ -3205,7 +3205,7 @@ CONFIG_SEC_DEBUG=y
 #
 # BSP Feature
 #
-CONFIG_SEC_BSP=y
+# CONFIG_SEC_BSP is not set
 
 #
 # Samsung TN logging feature
@@ -3218,8 +3218,7 @@ CONFIG_SEC_DEBUG_LAST_KMSG=y
 #
 # Samsung TN Power Management Options
 #
-CONFIG_SEC_PM=y
-CONFIG_SEC_PM_DEBUG=y
+# CONFIG_SEC_PM is not set
 CONFIG_VNSWAP=y
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
