--- a/arch/arm64/configs/lineageos_a7xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a7xelte_defconfig
@@ -298,6 +298,7 @@ CONFIG_EXYNOS_ASV_MARGIN_TEST=y
 CONFIG_CAL_SYS_PWRDOWN=y
 # CONFIG_EXYNOS7580_QUAD is not set
 CONFIG_EXYNOS7580_DYNAMIC_CLUSTER_HOTPLUG=y
+CONFIG_HOTPLUG_BOOSTED=y
 CONFIG_EXYNOS_CONTENT_PATH_PROTECTION=y
 CONFIG_EXYNOS5_SETUP_MIPIPHY=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
