arm64: dts: exynos7580: switch to Cortex-A53 specific pmu nodes
Commit https://github.com/Exynos-7580/android_kernel_samsung_exynos7580-common/commit/172141204183530648557de73cc80c1b6f769717 ("arm64: perf: add Cortex-A53 support") adds the
cortex A53 PMU support, thus instead of using the generic armv8-pmuv3
compatibility use the more specific Cortex A53 compatibility.

--- a/arch/arm64/boot/dts/exynos7580-q.dtsi
+++ b/arch/arm64/boot/dts/exynos7580-q.dtsi
@@ -26,7 +26,7 @@
 	#size-cells = <2>;
 
 	arm-pmu {
-		compatible = "arm,armv8-pmuv3";
+		compatible = "arm,cortex-a53-pmu";
 		interrupts = <0 34 4>,
 			     <0 35 4>,
 			     <0 36 4>,
