--- a/arch/arm64/boot/dts/exynos7580-q.dtsi
+++ b/arch/arm64/boot/dts/exynos7580-q.dtsi
@@ -121,6 +121,7 @@
 				>;
 			clocks = <&clock 16>;
 			clock-names = "cpu-cluster.0";
+			clock-frequency = <1700000000>;
 			voltage-tolerance = <1>; /* 2 percentage */
 			clock-latency = <100000>;
 		};
@@ -129,6 +130,7 @@
 			compatible = "arm,cortex-a53", "arm,armv8";
 			reg = <0x0 0x001>;
 			enable-method = "psci";
+			clock-frequency = <1700000000>;
 			cpu-idle-states = <&CPU_SLEEP_0 &CPU_SLEEP_1 &CPU_SLEEP_2 &CPU_SLEEP_3>;
 		};
 		cpu@002 {
@@ -136,6 +138,7 @@
 			compatible = "arm,cortex-a53", "arm,armv8";
 			reg = <0x0 0x002>;
 			enable-method = "psci";
+			clock-frequency = <1700000000>;
 			cpu-idle-states = <&CPU_SLEEP_0 &CPU_SLEEP_1 &CPU_SLEEP_2 &CPU_SLEEP_3>;
 		};
 		cpu@003 {
@@ -143,6 +146,7 @@
 			compatible = "arm,cortex-a53", "arm,armv8";
 			reg = <0x0 0x003>;
 			enable-method = "psci";
+			clock-frequency = <1700000000>;
 			cpu-idle-states = <&CPU_SLEEP_0 &CPU_SLEEP_1 &CPU_SLEEP_2 &CPU_SLEEP_3>;
 		};
 
