--- a/arch/arm64/boot/dts/exynos7580.dtsi
+++ b/arch/arm64/boot/dts/exynos7580.dtsi
@@ -122,6 +122,7 @@
 				>;
 			clocks = <&clock 16>;
 			clock-names = "cpu-cluster.0";
+			clock-frequency = <1700000000>;
 			voltage-tolerance = <1>; /* 2 percentage */
 			clock-latency = <100000>;
 		};
@@ -130,6 +131,7 @@
 			compatible = "arm,cortex-a53", "arm,armv8";
 			reg = <0x0 0x001>;
 			enable-method = "psci";
+			clock-frequency = <1700000000>;
 			cpu-idle-states = <&CPU_SLEEP_0 &CPU_SLEEP_1 &CPU_SLEEP_2 &CPU_SLEEP_3>;
 		};
 		cpu@002 {
@@ -137,6 +139,7 @@
 			compatible = "arm,cortex-a53", "arm,armv8";
 			reg = <0x0 0x002>;
 			enable-method = "psci";
+			clock-frequency = <1700000000>;
 			cpu-idle-states = <&CPU_SLEEP_0 &CPU_SLEEP_1 &CPU_SLEEP_2 &CPU_SLEEP_3>;
 		};
 		cpu@003 {
@@ -144,6 +147,7 @@
 			compatible = "arm,cortex-a53", "arm,armv8";
 			reg = <0x0 0x003>;
 			enable-method = "psci";
+			clock-frequency = <1700000000>;
 			cpu-idle-states = <&CPU_SLEEP_0 &CPU_SLEEP_1 &CPU_SLEEP_2 &CPU_SLEEP_3>;
 		};
 		cpu@100 {
@@ -174,6 +178,7 @@
 				>;
 			clocks = <&clock 17>;
 			clock-names = "cpu-cluster.1";
+			clock-frequency = <1700000000>;
 			voltage-tolerance = <1>; /* 2 percentage */
 			clock-latency = <100000>;
 		};
@@ -182,6 +187,7 @@
 			compatible = "arm,cortex-a53", "arm,armv8";
 			reg = <0x0 0x101>;
 			enable-method = "psci";
+			clock-frequency = <1700000000>;
 			cpu-idle-states = <&CPU_SLEEP_0 &CPU_SLEEP_1 &CPU_SLEEP_2 &CPU_SLEEP_3>;
 		};
 		cpu@102 {
@@ -189,6 +195,7 @@
 			compatible = "arm,cortex-a53", "arm,armv8";
 			reg = <0x0 0x102>;
 			enable-method = "psci";
+			clock-frequency = <1700000000>;
 			cpu-idle-states = <&CPU_SLEEP_0 &CPU_SLEEP_1 &CPU_SLEEP_2 &CPU_SLEEP_3>;
 		};
 		cpu@103 {
@@ -196,6 +203,7 @@
 			compatible = "arm,cortex-a53", "arm,armv8";
 			reg = <0x0 0x103>;
 			enable-method = "psci";
+			clock-frequency = <1700000000>;
 			cpu-idle-states = <&CPU_SLEEP_0 &CPU_SLEEP_1 &CPU_SLEEP_2 &CPU_SLEEP_3>;
 		};
 
