--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -127,6 +127,12 @@ config CPU_FREQ_DEFAULT_GOV_CULTIVATION
 	help
 	Use the CPUFreq governor 'cultivation' as default.
 
+config CPU_FREQ_DEFAULT_GOV_NEXUS
+	bool "nexus"
+	select CPU_FREQ_GOV_NEXUS
+	help
+	  Use the CPUFreq governor 'nexus' as default.
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -262,6 +268,18 @@ config CPU_FREQ_GOV_CONSERVATIVE
 
 	  To compile this driver as a module, choose M here: the
 	  module will be called cpufreq_conservative.
+
+	  For details, take a look at linux/Documentation/cpu-freq.
+
+	  If in doubt, say N.
+
+config CPU_FREQ_GOV_NEXUS
+	tristate "'nexus' cpufreq policy governor"
+	help
+	  Compile the CPUFreq governor 'nexus'.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called cpufreq_interactive.
 
 	  For details, take a look at linux/Documentation/cpu-freq.
 
