--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -340,7 +340,7 @@ CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_HOTPLUG_CPU=y
 CONFIG_LOCAL_TIMERS=y
-CONFIG_SWP_EMULATE=y
+# CONFIG_SWP_EMULATE is not set
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
@@ -406,8 +406,7 @@ CONFIG_CMA=y
 CONFIG_CMA_PINPAGE_MIGRATION=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_FORCE_MAX_ZONEORDER=11
-CONFIG_ARMV7_COMPAT=y
-CONFIG_ARMV7_COMPAT_CPUINFO=y
+# CONFIG_ARMV7_COMPAT is not set
 CONFIG_SECCOMP=y
 
 #
