--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -482,7 +482,7 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_CAFACTIVE=y
-CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+# CONFIG_CPU_FREQ_GOV_BIOSHOCK is not set
 CONFIG_CPU_FREQ_GOV_CULTIVATION=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
