a3xelte: enable zstd compression for zswap

--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -390,7 +390,8 @@ CONFIG_FRONTSWAP=y
 CONFIG_ZSWAP=y
 # CONFIG_ZSWAP_LZO is not set
 # CONFIG_ZSWAP_LZ4HC is not set
-CONFIG_ZSWAP_LZ4=y
+# CONFIG_ZSWAP_LZ4=y
+CONFIG_ZSWAP_ZSTD=y
 CONFIG_ZPOOL=y
 CONFIG_ZSMALLOC=y
 CONFIG_PGTABLE_MAPPING=y
@@ -3972,6 +3973,7 @@ CONFIG_CRYPTO_DEFLATE=y
 CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_CRYPTO_LZ4HC=y
+CONFIG_CRYPTO_ZSTD=y
 
 #
 # Random Number Generation
