a3xelte: config: fix typo

--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -390,7 +390,7 @@ CONFIG_FRONTSWAP=y
 CONFIG_ZSWAP=y
 # CONFIG_ZSWAP_LZO is not set
 # CONFIG_ZSWAP_LZ4HC is not set
-# CONFIG_ZSWAP_LZ4=y
+# CONFIG_ZSWAP_LZ4 is not set
 CONFIG_ZSWAP_ZSTD=y
 CONFIG_ZPOOL=y
 CONFIG_ZSMALLOC=y
