staging: erofs: use the new LZ4_decompress_safe_partial()
LZ4_decompress_safe_partial() can now decode exactly the nb of bytes
requested after the upstreamed commit cc9bfceb6849 ("lib/lz4: update LZ4
decompressor module"), remove the erofs hacked lz4 decompression code.

A more cleaned compressor wrapper will be introduced in the subsequent
patches in order to prepare for supporting multiple compression algorithms.

Signed-off-by: Gao Xiang <gaoxiang25@huawei.com>
Reviewed-by: Chao Yu <yuchao0@huawei.com>
Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>

--- a/drivers/staging/erofs/Makefile
+++ b/drivers/staging/erofs/Makefile
@@ -8,7 +8,7 @@ ccflags-y := -I$(src)/include
 
 erofs-y := super.o inode.o data.o namei.o dir.o utils.o
 erofs-$(CONFIG_EROFS_FS_XATTR)	+= xattr.o
-erofs-$(CONFIG_EROFS_FS_ZIP)	+= unzip_vle.o unzip_vle_lz4.o unzip_lz4.o
+erofs-$(CONFIG_EROFS_FS_ZIP)	+= unzip_vle.o unzip_vle_lz4.o
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
