--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -409,6 +409,7 @@ CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_FORCE_MAX_ZONEORDER=11
 # CONFIG_ARMV7_COMPAT is not set
 CONFIG_SECCOMP=y
+CONFIG_VM_MAX_READAHEAD=2048
 
 #
 # Boot options
