--- a/arch/arm64/configs/lineageos_s5neolte_defconfig
+++ b/arch/arm64/configs/lineageos_s5neolte_defconfig
@@ -85,7 +85,10 @@ CONFIG_HIGH_RES_TIMERS=y
 #
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_BSD_PROCESS_ACCT is not set
-# CONFIG_TASKSTATS is not set
+CONFIG_TASKSTATS=y
+CONFIG_TASK_DELAY_ACCT=y
+CONFIG_TASK_XACCT=y
+CONFIG_TASK_IO_ACCOUNTING=y
 
 #
 # RCU Subsystem
@@ -343,11 +346,11 @@ CONFIG_SWP_EMULATE=y
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
 CONFIG_ARCH_NR_GPIO=1024
-CONFIG_HZ_100=y
+# CONFIG_HZ_100 is not set
 # CONFIG_HZ_250 is not set
-# CONFIG_HZ_300 is not set
+CONFIG_HZ_300=y
 # CONFIG_HZ_1000 is not set
-CONFIG_HZ=100
+CONFIG_HZ=300
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
@@ -1082,7 +1085,7 @@ CONFIG_BLK_DEV_RAM_SIZE=16384
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 CONFIG_SAMSUNG_JACK=y
-CONFIG_UID_CPUTIME=y
+CONFIG_UID_SYS_STATS=y
 # CONFIG_C2PORT is not set
 
 #
@@ -3227,7 +3230,7 @@ CONFIG_SEC_DEBUG=y
 #
 # BSP Feature
 #
-# CONFIG_SEC_BSP is not set
+CONFIG_SEC_BSP=y
 
 #
 # Samsung TN logging feature
@@ -3240,7 +3243,8 @@ CONFIG_SEC_DEBUG_LAST_KMSG=y
 #
 # Samsung TN Power Management Options
 #
-CONFIG_SEC_PM is not set
+CONFIG_SEC_PM=y
+CONFIG_SEC_PM_DEBUG=y
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
@@ -3655,6 +3659,7 @@ CONFIG_CRAMFS=y
 # CONFIG_QNX6FS_FS is not set
 # CONFIG_ROMFS_FS is not set
 CONFIG_PSTORE=y
+CONFIG_PSTORE_LZ4_COMPRESS=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
@@ -3894,6 +3899,7 @@ CONFIG_CRYPTO_HASH2=y
 CONFIG_CRYPTO_RNG=y
 CONFIG_CRYPTO_RNG2=y
 CONFIG_CRYPTO_PCOMP2=y
+CONFIG_CRYPTO_ACOMP2=y
 CONFIG_CRYPTO_MANAGER=y
 CONFIG_CRYPTO_MANAGER2=y
 # CONFIG_CRYPTO_USER is not set
