arm64: configs: Enable DTB targets

--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -313,6 +313,7 @@ CONFIG_SAMSUNG_PRODUCT_SHIP=y
 # CONFIG_MACH_UNIVERSAL7420 is not set
 # CONFIG_MACH_SMDK7580 is not set
 CONFIG_MACH_UNIVERSAL7580=y
+CONFIG_MACH_EXYNOS7580_A3XELTE=y
 # CONFIG_SEC_FACTORY is not set
 CONFIG_EXYNOS_DTBTOOL=y
 CONFIG_EXYNOS_DTBH_PLATFORM_CODE=0x50a6
