--- a/arch/arm64/configs/lineageos_gvwifi_defconfig
+++ b/arch/arm64/configs/lineageos_gvwifi_defconfig
@@ -312,6 +312,7 @@ CONFIG_SAMSUNG_PRODUCT_SHIP=y
 # CONFIG_MACH_UNIVERSAL7420 is not set
 # CONFIG_MACH_SMDK7580 is not set
 CONFIG_MACH_UNIVERSAL7580=y
+CONFIG_MACH_EXYNOS7580_GVWIFI=y
 # CONFIG_SEC_FACTORY is not set
 CONFIG_EXYNOS_SPI_RESET_DURING_DSTOP=y
 CONFIG_EXYNOS_I2C_RESET_DURING_DSTOP=y
