arm64: defconfigs: disable PM_SYNC_BEFORE_SUSPEND
Since we have a battery, we don't risk losing anything more than
when the system is awake

--- a/arch/arm64/configs/los_a3xelte_defconfig
+++ b/arch/arm64/configs/los_a3xelte_defconfig
@@ -467,7 +467,7 @@ CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_RUNTIME=y
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
-CONFIG_PM_SYNC_BEFORE_SUSPEND=y
+# CONFIG_PM_SYNC_BEFORE_SUSPEND is not set
 CONFIG_QUICK_WAKEUP=y
 
 #
