--- a/arch/arm64/configs/los16_a3xelte_defconfig
+++ b/arch/arm64/configs/los16_a3xelte_defconfig
@@ -467,7 +467,7 @@ CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_RUNTIME=y
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
-# CONFIG_PM_SYNC_BEFORE_SUSPEND is not set
+CONFIG_PM_SYNC_BEFORE_SUSPEND=y
 CONFIG_QUICK_WAKEUP=y
 
 #
@@ -696,7 +696,7 @@ CONFIG_NETFILTER_XT_CONNMARK=y
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
 CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
-# CONFIG_NETFILTER_XT_TARGET_CT is not set
+CONFIG_NETFILTER_XT_TARGET_CT=y
 # CONFIG_NETFILTER_XT_TARGET_DSCP is not set
 # CONFIG_NETFILTER_XT_TARGET_HL is not set
 # CONFIG_NETFILTER_XT_TARGET_HMARK is not set
@@ -3285,7 +3285,7 @@ CONFIG_DEVFREQ_GOV_SIMPLE_EXYNOS=y
 CONFIG_ARM_EXYNOS7580_BUS_DEVFREQ=y
 # CONFIG_EXTCON is not set
 CONFIG_MEMORY=y
-CONFIG_EXYNOS_MCOMP=y
+# CONFIG_EXYNOS_MCOMP is not set
 # CONFIG_EXYNOS7420_MC is not set
 CONFIG_IIO=y
 CONFIG_IIO_BUFFER=y
@@ -3946,7 +3946,7 @@ CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_RMD320 is not set
 CONFIG_CRYPTO_SHA1=y
 CONFIG_CRYPTO_SHA256=y
-# CONFIG_CRYPTO_SHA512 is not set
+CONFIG_CRYPTO_SHA512=y
 # CONFIG_CRYPTO_TGR192 is not set
 # CONFIG_CRYPTO_WP512 is not set
 
@@ -3964,6 +3964,7 @@ CONFIG_CRYPTO_DES=y
 # CONFIG_CRYPTO_FCRYPT is not set
 # CONFIG_CRYPTO_KHAZAD is not set
 # CONFIG_CRYPTO_SALSA20 is not set
+CONFIG_CRYPTO_CHACHA20=y
 # CONFIG_CRYPTO_SEED is not set
 # CONFIG_CRYPTO_SERPENT is not set
 # CONFIG_CRYPTO_TEA is not set
@@ -3977,7 +3978,7 @@ CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_ZLIB is not set
 CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_LZ4=y
-CONFIG_CRYPTO_LZ4HC=y
+# CONFIG_CRYPTO_LZ4HC is not set
 CONFIG_CRYPTO_ZSTD=y
 
 #
@@ -3996,14 +3997,17 @@ CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
 CONFIG_PUBLIC_KEY_ALGO_RSA=y
 CONFIG_X509_CERTIFICATE_PARSER=y
 CONFIG_ARM64_CRYPTO=y
+CONFIG_CRYPTO_SHA256_ARM64=y
+CONFIG_CRYPTO_SHA512_ARM64=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
-# CONFIG_CRYPTO_GHASH_ARM64_CE is not set
+CONFIG_CRYPTO_GHASH_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE=y
-# CONFIG_CRYPTO_AES_ARM64_CE_CCM is not set
+CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
-# CONFIG_CRYPTO_AES_ARM64_NEON_BLK is not set
+CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
+CONFIG_CRYPTO_CHACHA20_NEON=y
 CONFIG_BINARY_PRINTF=y
 
 #
