Add proper building quad core variant for a3xelte
I used fake SoC's name by Smasung for A3 2016

--- a/arch/arm64/mach-exynos/Kconfig
+++ b/arch/arm64/mach-exynos/Kconfig
@@ -310,6 +310,11 @@ config MACH_EXYNOS7580_UNIVERSAL
 	bool "Universal (for test only)"
 	depends on MACH_UNIVERSAL7580
 
+config MACH_EXYNOS7578_A3XELTE
+	bool "SAMSUNG Galaxy A3 (SM-A310F) Quad core"
+	select EXYNOS7580_QUAD
+	depends on MACH_UNIVERSAL7580
+
 config MACH_EXYNOS7580_A3XELTE
 	bool "SAMSUNG Galaxy A3 (SM-A310F)"
 	depends on MACH_UNIVERSAL7580
