a3xelte: update defconfigs

--- a/arch/arm64/configs/lineageos_a3xelte_defconfig
+++ b/arch/arm64/configs/lineageos_a3xelte_defconfig
@@ -299,7 +299,6 @@ CONFIG_EXYNOS_ASV_DYNAMIC_ABB=y
 CONFIG_EXYNOS_ASV_MARGIN_TEST=y
 # CONFIG_SKIP_HW_BREAKPOINT is not set
 CONFIG_CAL_SYS_PWRDOWN=y
-# CONFIG_EXYNOS7580_QUAD is not set
 # CONFIG_EXYNOS7580_DYNAMIC_CLUSTER_HOTPLUG is not set
 # CONFIG_EXYNOS_CONTENT_PATH_PROTECTION is not set
 CONFIG_EXYNOS5_SETUP_MIPIPHY=y
@@ -863,7 +862,11 @@ CONFIG_NET_SCH_PRIO=y
 # CONFIG_NET_SCH_QFQ is not set
 # CONFIG_NET_SCH_CODEL is not set
 # CONFIG_NET_SCH_FQ_CODEL is not set
-CONFIG_NET_SCH_INGRESS=y
+# CONFIG_NET_SCH_FQ is not set
+# CONFIG_NET_SCH_HHF is not set
+# CONFIG_NET_SCH_PIE is not set
+# CONFIG_NET_SCH_FQ_PIE is not set
+# CONFIG_NET_SCH_INGRESS is not set
 # CONFIG_NET_SCH_PLUG is not set
 
 #
